# mmap-vs-sysfs-research

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  build.sh
cmake/: arch.cmake
helpers/: main.py  pyproject.toml  stats_mmap.csv  stats_sysfs.csv
outputs/mmap/: mmap_latencies_2026-04-06:16:54:58.csv  mmap_latencies_2026-04-06:16:58:42.csv  mmap_latencies_2026-04-06:17:02:03.csv
outputs/sysfs/: sysfs_latencies_2026-04-06:16:43:21.csv  sysfs_latencies_2026-04-06:16:47:37.csv  sysfs_latencies_2026-04-06:16:50:58.csv
src/: main.c
src/servo/: servo_controller.c  servo_controller.h
src/utils/: logger.c  logger.h  mmap_control.c  mmap_control.h  project_constants.h  project_types.h  pwm_io_logic.c  pwm_io_logic.h
